<resources>
    <string name="app_name">Blablawild</string>
    <string name="action_settings">Settings</string>
    <string name="search_text">Search</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="date">Date</string>
    <string name="_01_01_18">01/01/18</string>
    <string name="search">Search</string>
    <string name="search_an_itinerary">Search an itinerary</string>
    <string name="_31_12_1970_3_30pm">31/12/1970 3:30PM</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="_19">$19</string>


        <string-array name="spinner_vehicul">
            <item>Please select</item>
            <item>Car</item>
            <item>Boat</item>
            <item>Plane</item>
        </string-array>

</resources>
